--- a/category-service/src/main/resources/application.properties
+++ b/category-service/src/main/resources/application.properties
@@ -1,10 +1,23 @@
 spring.application.name=categories-service
 server.port=8082
 
-spring.jpa.database=postgresql
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url = jdbc:postgresql://pgdb:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.database=postgresql
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url = jdbc:postgresql://pgdb:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.hateoas.use-hal-as-default-json-media-type=false
+
+
+
+security.signing-key=kJlounH9Rde_HvDL3OrmUzcxRt9dBEHX6VB6SyL4fGoiwic2NvcG1NDkOG4
+security.encoding-strength=256
+security.security-realm=Demo JWT
+
+security.jwt.client-id=html5
+security.jwt.client-secret=icmVhZCJdLCJ
+security.jwt.grant-type=password
+security.jwt.scope-read=read
+security.jwt.scope-write=write
+security.jwt.resource-ids=demoresourceids
